--- a/Erpone/Software/users/templates/users/home.html
+++ b/Erpone/Software/users/templates/users/home.html
@@ -9,16 +9,29 @@
 </head>
 <body>
     <div class="all_container">
+        
 
         <div class="welcom_c">
-            <h1>Welcom</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas qui sint odio doloremque! Voluptatibus, sequi. Vel alias debitis obcaecati veniam amet blanditiis natus ipsam, pariatur, quaerat odit vero libero doloribus!</p>
+            <h2>Enter QC settings</h2>
+            <div style="display: flex; align-items: center;">
+                <p>Lot size</p>  
+                <input type="number">
+            </div>
+            <div style="display: flex; align-items: center;">
+                <p>Type of control</p>  
+                <select name="type" id="type">
+                    <option value="simple">Simple control</option> 
+                    <option value="double">Double control</option> 
+                </select>
+            </div>
+            <div style="display: flex;  align-items: center;">
+                <p>Acceptable quality level</p>  
+                <input type="number">
+            </div>
+            <button>Information</button>
+            <button>Start calculation</button>
         </div>
 
-        <div class="info_c">
-            <h1>Info:</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas qui sint odio doloremque! Voluptatibus, sequi. Vel alias debitis obcaecati veniam amet blanditiis natus ipsam, pariatur, quaerat odit vero libero doloribus!</p>
-        </div>
 
 
 
