--- a/Erpone/Software/users/templates/users/home.html
+++ b/Erpone/Software/users/templates/users/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{% static 'users/home.css' %}">
-    
+    {{ results|json_script:"results" }}
     <title>Document</title>
 </head>
 <body>
@@ -43,7 +43,11 @@
             </div>
             <div style="display: flex;  align-items: center;">
                 <p>Acceptable quality level</p>  
-                <input type="number" name="aqualityl" id="aqualityl">
+                <select type="number" name="aqualityl" id="aqualityl"> 
+                    <option value="simple">10%</option> 
+                    <option value="double">5%</option> 
+
+                </select>
             </div>
             <button>Information</button>
             <button>Start calculation</button>
