--- a/Erpone/Software/users/templates/users/home.html
+++ b/Erpone/Software/users/templates/users/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{% static 'users/home.css' %}">
     {{ results|json_script:"results" }}
+    <script id="results" type="application/json"></script>
     <title>Document</title>
 </head>
 <body>
