implement dynamiq mqa in front end

--- a/Erpone/Software/users/templates/users/home.html
+++ b/Erpone/Software/users/templates/users/home.html
@@ -33,7 +33,7 @@
             <h2>Enter QC settings</h2>
             <div style="display: flex; align-items: center;">
                 <p>Lot size</p>  
-                <input type="number" name="Lot" id="say" >
+                <input type="number" name="Lot" id="Lot" onchange="set_mqa()">
             </div>
             <div style="display: flex; align-items: center;">
                 <p>Type of control</p>  
