--- a/Erpone/Software/users/templates/users/home.html
+++ b/Erpone/Software/users/templates/users/home.html
@@ -48,8 +48,8 @@
                 <div style="display: flex;  align-items: center;">
                     <p>Acceptable quality level %</p>  
                     <select type="number" name="aqualityl" id="aqualityl"> 
-                        <option value="simple">10%</option> 
-                        <option value="double">5%</option> 
+                        <option >10%</option> 
+                        <option >5%</option> 
                     </select>
                 </div>
             
